Update main page with Amazon Ads API tool information

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Privacy Notice</title>
+    <title>Amazon Ads API Tool</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             font-family: Arial, sans-serif;
-            max-width: 800px;
+            max-width: 900px;
             margin: 40px auto;
             padding: 0 20px;
             line-height: 1.6;
@@ -19,42 +19,77 @@
             border-bottom: 2px solid #ff9900;
             padding-bottom: 10px;
         }
+        h2 {
+            color: #232f3e;
+            margin-top: 2em;
+        }
         p {
             margin-bottom: 1em;
         }
-        .contact {
-            margin-top: 2em;
+        ul {
+            margin-bottom: 1.5em;
+        }
+        li {
+            margin-bottom: 0.5em;
+        }
+        .footer {
+            margin-top: 3em;
             padding-top: 1em;
             border-top: 1px solid #ddd;
             font-size: 0.9em;
             color: #666;
         }
+        a {
+            color: #ff9900;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
 
-<h1>Privacy Notice</h1>
+<h1>Amazon Ads API Tool</h1>
 
 <p>
-    This application is an internal tool used to access the Amazon Ads API
-    for managing and analyzing advertising performance on Amazon.
+    This is an internal tool for accessing and managing Amazon Advertising data
+    through the Amazon Ads API.
 </p>
+
+<h2>Purpose</h2>
 
 <p>
-    The application only accesses advertising-related data authorized
-    by the account owner through Amazon's OAuth (Login with Amazon).
+    This application enables automated access to Amazon Ads API for:
 </p>
+
+<ul>
+    <li>Retrieving advertising campaign performance data</li>
+    <li>Analyzing metrics and generating reports</li>
+    <li>Optimizing campaign management workflows</li>
+    <li>Automating routine advertising operations</li>
+</ul>
+
+<h2>Authentication</h2>
 
 <p>
-    No personal data is sold, shared, or transferred to third parties.
-    All data is used solely for internal reporting, analytics,
-    and campaign optimization purposes.
+    The tool uses Amazon's OAuth 2.0 (Login with Amazon) for secure authentication.
+    Only authorized users with proper Amazon Advertising account access can use this application.
 </p>
 
-<p class="contact">
-    If you have questions about this privacy notice, please contact
-    the account administrator.
+<h2>Data Access</h2>
+
+<p>
+    This application only accesses advertising-related data that you explicitly authorize.
+    No data is shared with third parties or used for purposes outside of internal
+    analytics and campaign optimization.
 </p>
+
+<div class="footer">
+    <p>
+        <a href="/privacy">Privacy Notice</a>
+    </p>
+</div>
 
 </body>
 </html>
